--- a/styles/Skills.css
+++ b/styles/Skills.css
@@ -11,3 +11,9 @@
 .skills__list-item:hover {
   cursor: auto;
 }
+
+.skills__list-item-icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
